<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/lDetailedRecipeInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/tRecipeNameFull"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/mainAppColor"
                android:gravity="center_vertical|center_horizontal"
                android:minHeight="@dimen/label_height"
                android:text="tRecipeName2"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tIngredientsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:paddingTop="5dp"
                android:text="@string/ingredients"
                android:textColor="@color/greyText"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tIngredient2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="tIngredient2"
                android:textColor="@color/greyText" />

            <TextView
                android:id="@+id/tInscructionTitle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/label_height"
                android:background="@color/mainAppColor"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/instruction"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="@dimen/label_height"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/steps"
                android:textColor="@color/mainAppColor"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/mainAppColor" />


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v4.view.ViewPager
                    android:id="@+id/steps_view_pager"
                    android:layout_width="match_parent"
                    android:layout_height="355dp">

                </android.support.v4.view.ViewPager>


                <ImageView
                    android:id="@+id/iBackStep"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginTop="70dp"
                    android:background="@color/bg_step_btn"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_back_step" />

                <ImageView
                    android:id="@+id/iNextStep"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_gravity="right"
                    android:layout_marginTop="70dp"
                    android:background="@color/bg_step_btn"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_next_step" />
            </FrameLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/tLike1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="right"
                    android:layout_toLeftOf="@+id/iLike"
                    android:layout_toStartOf="@+id/iLike"
                    android:paddingRight="5dp"
                    android:text="@string/add_to"
                    android:textColor="@color/mainAppColor"
                    android:textSize="12sp" />

                <ImageView
                    android:id="@+id/iLike"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/favorite_bg"
                    android:padding="6dp"
                    android:src="@drawable/ic_add_favorite"
                    app:srcCompat="@drawable/ic_add_favorite"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:id="@+id/tLike2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:text="@string/favorite"
                    android:textColor="@color/mainAppColor"
                    android:textSize="12sp"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/iLike"
                    android:layout_toEndOf="@+id/iLike" />

            </RelativeLayout>

            <TextView
                android:id="@+id/tShare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/share"
                android:textColor="@color/mainAppColor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tDevelop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/mainAppColor"
                android:gravity="center_horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/footer"
                android:textColor="@android:color/white"
                android:textSize="16sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/lMainRecipeInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/mainAppColor" />

            <TextView
                android:id="@+id/tRecipeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:minHeight="@dimen/label_height"
                android:text="tRecipeName"
                android:textColor="@color/mainAppColor"
                android:textSize="24sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/mainAppColor" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/meal" />

            <TextView
                android:id="@+id/tIncludeTitle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/label_height"
                android:background="@color/mainAppColor"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/ingredients"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tIngredient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="tIngredient"
                android:textColor="@color/greyText" />

            <TextView
                android:id="@+id/tDescriptionTitle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/label_height"
                android:background="@color/mainAppColor"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/description"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <com.ms.square.android.expandabletextview.ExpandableTextView
                android:id="@+id/expand_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/expandable_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="tDescription"
                    android:textColor="@color/greyText" />

                <ImageButton
                    android:id="@id/expand_collapse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|bottom"
                    android:background="@android:color/transparent"
                    android:padding="16dp"
                    android:visibility="gone"/>

            </com.ms.square.android.expandabletextview.ExpandableTextView>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>